[tool.poetry]
name = "oz-django"
version = "0.1.0"
description = "oz backend django project"
authors = ["ready-oun <heeyn.lim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
